--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ django = "*"
 django-phonenumber-field = {extras = ["phonenumbers"], version = "*"}
 djangorestframework = "*"
 djangorestframework-datatables = "*"
+django-crispy-forms = "*"
 
 [dev-packages]
 
